--- a/app/globals.css
+++ b/app/globals.css
@@ -1,16 +1,39 @@
 @import "tailwindcss";
+@import "tw-animate-css";
+
 
 :root {
-  --background: #ffffff;
+  --background: #000;
   --foreground: #171717;
 }
 
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
+    --animate-shimmer-slide: shimmer-slide var(--speed) ease-in-out infinite
+      alternate;
+    --animate-spin-around: spin-around calc(var(--speed) * 2) infinite linear;
+
+    @keyframes shimmer-slide {
+      to {
+        transform: translate(calc(100cqw - 100%), 0);
+      }
+    }
+    @keyframes spin-around {
+      0% {
+        transform: translateZ(0) rotate(0);
+      }
+      15%,
+      35% {
+        transform: translateZ(0) rotate(90deg);
+      }
+      65%,
+      85% {
+        transform: translateZ(0) rotate(270deg);
+      }
+      100% {
+        transform: translateZ(0) rotate(360deg);
+      }
+    }
+  }
 
 @media (prefers-color-scheme: dark) {
   :root {
@@ -22,5 +45,10 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
 }
+
+.beams-container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+  }
