--- a/app/globals.css
+++ b/app/globals.css
@@ -1,10 +1,9 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
-
 :root {
   --background: #000;
-  --foreground: #171717;
+  --foreground: #000;
 }
 
 @theme inline {
@@ -37,7 +36,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #000000;
     --foreground: #ededed;
   }
 }
